--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ matrix:
         - cargo fmt --version
       script:
         - cargo fmt -- --check
+      env:
+        - CHECK_FORMAT=TRUE
 
     # Clippy
     - rust: stable
@@ -29,6 +31,8 @@ matrix:
       script:
         # Fail if clippy output contains "error:" or "warning:"
         - cargo clippy 2>&1 | tee ./clippy.out && ! grep -qe  "error:\|warning:" ./clippy.out
+      env:
+        - CHECK_SYNTAX=TRUE
 
     # Test coverage (with Tarpaulin)
     - rust: stable
@@ -38,6 +42,8 @@ matrix:
         - RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin --force
       script:
         - cargo tarpaulin --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
+      env:
+        - COVERAGE_CHECK=TRUE
 
 script:
   - cargo test
